    new root window use HOME=/root incase no env reset
    fix Export from desktop menu
    man panel memory
    task man change default cols to current speed and remain
    fix identification of empty optical drive
    change default device icons
    add lilyterm to emulators list
    remove erroneous files from pkg branch
    README added wiki link Guidelines For Distributing Modifications
0.9.0   2013-10-22:
    add browse-for options in Rename/New dialog Browse dialog
    run fm Devices menu functions in task man
    let vfs task show run-task missing file errors
    desktop prefs - insensitive wallpaper options if unchecked
    file props dlg - show target type of relative link
    Devices menu activate Open on left-click
    Devices menu activate Remove / Eject on middle-click
    Devices menu add Mount and Unmount
    device remove via desktop shows progress dialog
    fm Devices menu show and obey option Settings|New Tab
    allow HAL eject unmounted
    add HAL unmount optical in addition to eject
    fix HAL duplicate devices listed
    Devices list and menu Mount and Unmount sensitivity
    added desktop option Arrange Icons|Custom
    single-click or right-click on desktop or unselected unselects
    automatic desktop drag action
    Desktop prefs added margins, desktop single click
    add Open|Desktop Folder
    desktop name sort natural icase
    fix desktop center wallpaper larger than screen #296
    new default desktop background colors
    fix desktop shifted with panel #248
    revert mouse buttons 6 7 as back/forward (for horz scrolling) #294
    move packages to pkg branch
    add desktop prefs option Open folders with MIME app
    Open|Default on dir now uses MIME app
    obey desktop file keys Path and Terminal (+full bash Exec) #232
    execute separate commands on no desktop file Exec field code
    fix crash on special escape chars on command line #302
    add desktop pref font button